--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,3 @@
 <h1> This is our contact details </h1>
-<h2> Our phone number: 123-456-789 <h2>
+<h2> Our phone number: 123-456-789 </h2>
+<h3> kizitoonoabhagbe@gmail.com </h3>
